# calculator-vala-gtk

./: .buildconfig  COPYING  meson.build  org.gnome.Calculator.json~
data/: meson.build  org.gnome.Calculator.appdata.xml.in  org.gnome.Calculator.gschema.xml
po/: POTFILES
src/: main.vala  meson.build  window.vala
